# angel

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: coverage.yml  linux.yml  macos.yml  windows.yml
.github/workflows/: coverage.yml  linux.yml  macos.yml  windows.yml
docs/: Doxyfile  Makefile  changelog.rst  conf.py  index.rst  installation.rst  introduction.rst  references.bib  references.rst  refs.bib  requirements.txt  uqs_preparation.rst
examples/: CMakeLists.txt  example_angel.cpp  qsp_using_bdd.cpp  qsp_using_deps.cpp
experiments/: CMakeLists.txt  experiments.hpp  qsp_CyclicState.cpp  qsp_cuts.cpp  qsp_epfl_cuts.cpp  qsp_file.cpp  qsp_functions.cpp  qsp_using_add.cpp  qsp_using_bdd.cpp
include/: CMakeLists.txt
include/angel/: angel.hpp
lib/: CMakeLists.txt
libs/: CMakeLists.txt
libs/bill/bill/sat/: tseytin.hpp
libs/bill/bill/sat/interface/: common.hpp  glucose.hpp
libs/bill/bill/sat/solver/: ghack.hpp
libs/cudd/: .travis.yml  Makefile  config.status  libtool
libs/cudd/cplusplus/: test.tst  test_obj.test  testmulti  testobj
libs/cudd/cplusplus/.deps/: cplusplus_libobj_la-cuddObj.Plo  cplusplus_testmulti-testmulti.Po  cplusplus_testobj-testobj.Po
libs/cudd/cplusplus/.libs/: libobj.la
libs/cudd/cudd/: extra.tst  r7x8.1.tst  test_cudd.test  testcudd  testextra
libs/cudd/cudd/.deps/: cudd_libcudd_la-cuddAPI.Plo  cudd_libcudd_la-cuddAddAbs.Plo  cudd_libcudd_la-cuddAddApply.Plo  cudd_libcudd_la-cuddAddFind.Plo  cudd_libcudd_la-cuddAddInv.Plo  cudd_libcudd_la-cuddAddIte.Plo  cudd_libcudd_la-cuddAddNeg.Plo  cudd_libcudd_la-cuddAddWalsh.Plo  cudd_libcudd_la-cuddAndAbs.Plo  cudd_libcudd_la-cuddAnneal.Plo  cudd_libcudd_la-cuddApa.Plo  cudd_libcudd_la-cuddApprox.Plo  cudd_libcudd_la-cuddBddAbs.Plo  cudd_libcudd_la-cuddBddCorr.Plo  cudd_libcudd_la-cuddBddIte.Plo  cudd_libcudd_la-cuddBridge.Plo  cudd_libcudd_la-cuddCache.Plo  cudd_libcudd_la-cuddCheck.Plo  cudd_libcudd_la-cuddClip.Plo  cudd_libcudd_la-cuddCof.Plo  cudd_libcudd_la-cuddCompose.Plo  cudd_libcudd_la-cuddDecomp.Plo  cudd_libcudd_la-cuddEssent.Plo  cudd_libcudd_la-cuddExact.Plo  cudd_libcudd_la-cuddExport.Plo  cudd_libcudd_la-cuddGenCof.Plo  cudd_libcudd_la-cuddGenetic.Plo  cudd_libcudd_la-cuddGroup.Plo  cudd_libcudd_la-cuddHarwell.Plo  cudd_libcudd_la-cuddInit.Plo  cudd_libcudd_la-cuddInteract.Plo  cudd_libcudd_la-cuddLCache.Plo  cudd_libcudd_la-cuddLevelQ.Plo  cudd_libcudd_la-cuddLinear.Plo  cudd_libcudd_la-cuddLiteral.Plo  cudd_libcudd_la-cuddMatMult.Plo  cudd_libcudd_la-cuddPriority.Plo  cudd_libcudd_la-cuddRead.Plo  cudd_libcudd_la-cuddRef.Plo  cudd_libcudd_la-cuddReorder.Plo  (+23 more)
libs/cudd/cudd/.libs/: libcudd.la  libcudd.lai
libs/cudd/dddmp/: test_dddmp.trs  testdddmp
libs/cudd/dddmp/.deps/: dddmp_libdddmp_la-dddmpBinary.Plo  dddmp_libdddmp_la-dddmpConvert.Plo  dddmp_libdddmp_la-dddmpDbg.Plo  dddmp_libdddmp_la-dddmpLoad.Plo  dddmp_libdddmp_la-dddmpLoadCnf.Plo  dddmp_libdddmp_la-dddmpNodeAdd.Plo  dddmp_libdddmp_la-dddmpNodeBdd.Plo  dddmp_libdddmp_la-dddmpNodeCnf.Plo  dddmp_libdddmp_la-dddmpStoreAdd.Plo  dddmp_libdddmp_la-dddmpStoreBdd.Plo  dddmp_libdddmp_la-dddmpStoreCnf.Plo  dddmp_libdddmp_la-dddmpStoreMisc.Plo  dddmp_libdddmp_la-dddmpUtil.Plo  dddmp_testdddmp-testdddmp.Po
libs/cudd/dddmp/.libs/: libdddmp.la
libs/cudd/doc/: cudd.ind
libs/cudd/epd/.deps/: cudd_libcudd_la-epd.Plo
libs/cudd/html/: annotated.html  bnet_8c.html  bnet_8c__incl.dot  bnet_8h.html  bnet_8h__incl.dot  bnet_8h_source.html  chkMterm_8c.html  chkMterm_8c__incl.dot  classABDD.html  classABDD__coll__graph.dot  classABDD__inherit__graph.dot  classADD.html  classADD__coll__graph.dot  classADD__inherit__graph.dot  classBDD.html  classBDD__coll__graph.dot  classBDD__inherit__graph.dot  classCapsule.html  classCapsule__coll__graph.dot  classCudd.html  classDD.html  classDD__coll__graph.dot  classDD__inherit__graph.dot  classTask.html  classZDD.html  classZDD__coll__graph.dot  classZDD__inherit__graph.dot  classes.html  classjoinThreads.html  cpu__stats_8c.html  cpu__stats_8c__incl.dot  cpu__time_8c.html  cpu__time_8c__incl.dot  cstringstream_8c.html  cstringstream_8c__incl.dot  cstringstream_8h.html  cstringstream_8h_source.html  cuddAPI_8c.html  cuddAPI_8c__incl.dot  cuddAddAbs_8c.html  (+479 more)
libs/cudd/mtr/: test.tst  test_mtr.test  testmtr
libs/cudd/mtr/.deps/: cudd_libcudd_la-mtrBasic.Plo  cudd_libcudd_la-mtrGroup.Plo  mtr_testmtr-testmtr.Po
libs/cudd/nanotrav/: C17.tst  C880.tst  adj49.tst  closest.tst  ham01.tst  miniFirst.tst  mult32a.tst  nanotrav  rcn25.tst  s27.tst  s27b.tst  s27c.tst  s382.tst  s641.tst  test_ntrv.test  test_ntrv.trs
libs/cudd/nanotrav/.deps/: nanotrav_nanotrav-bnet.Po  nanotrav_nanotrav-chkMterm.Po  nanotrav_nanotrav-main.Po  nanotrav_nanotrav-ntr.Po  nanotrav_nanotrav-ntrBddTest.Po  nanotrav_nanotrav-ntrHeap.Po  nanotrav_nanotrav-ntrMflow.Po  nanotrav_nanotrav-ntrShort.Po  nanotrav_nanotrav-ntrZddTest.Po
libs/cudd/st/: test_st.test  test_st.trs  testst
libs/cudd/st/.deps/: cudd_libcudd_la-st.Plo  st_testst-testst.Po
libs/cudd/util/.deps/: cudd_libcudd_la-cpu_stats.Plo  cudd_libcudd_la-cpu_time.Plo  cudd_libcudd_la-cstringstream.Plo  cudd_libcudd_la-datalimit.Plo  cudd_libcudd_la-pathsearch.Plo  cudd_libcudd_la-pipefork.Plo  cudd_libcudd_la-prtime.Plo  cudd_libcudd_la-safe_mem.Plo  cudd_libcudd_la-strsav.Plo  cudd_libcudd_la-texpand.Plo  cudd_libcudd_la-ucbqsort.Plo
libs/easy/easy/: cubes.hpp  exact_esop_cover_from_divisors.hpp
libs/kitty/kitty/: bit_operations.hpp  esop.hpp  npn.hpp  partial_truth_table.hpp  properties.hpp
libs/tweedledee/tweedledee/qasm/ast/: ast_node_kinds.hpp
libs/tweedledum/include/tweedledum/IR/: Circuit.h
libs/tweedledum/include/tweedledum/Passes/: Optimization.h
libs/tweedledum/tweedledum/algorithms/synthesis/: stg.hpp
libs/tweedledum/tweedledum/gates/: mcmt_gate.hpp
libs/tweedledum/tweedledum/io/: write_unicode.hpp
test/: CMakeLists.txt
test/dependency_analysis/: esop_based_dependency_analysis.cpp  pattern_based_dependency_analysis.cpp
test/quantum_state_preparation/: esop.cpp  (+3 more)
tests/: CMakeLists.txt  stopwatch.cpp  test.cpp
(+37 files in other folders)
